index fuke cange

--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
   <div class="alert alert-warning alert-dismissible fade show text-center btn-lg" role="alert">
     <strong>Welcome!</strong> Thanks for visiting my portfolio. Explore my projects and skills below. <span class="badge rounded-pill text-bg-success">Enjoy! 😊</span>
     <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-  </div>
+  </div>     
 
-
+<div>hamza</div>
   <!--HERO SECTION  -->
   <section id="home" class="hero">
     <div class="hero-content">
