--- a/index.html
+++ b/index.html
@@ -112,6 +112,22 @@
     </div>
   </section>
 
+    <!--Carousel Slider -->
+<div class="container">
+    <div id="carouselExampleSlidesOnly" class="carousel slide carousel-fade" data-bs-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="Slider-1.png" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="Slider-2.png" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item ">
+      <img src="Slider-3.png" class="d-block w-100" alt="...">
+    </div>
+  </div>
+</div>
+</div>
   <!-- About Gallery  -->
 
   <section id="gallery" class="gallery">
@@ -127,6 +143,9 @@
     <p>Lets Work Together ! You can reach me at :</p>
     <a href="mianarham128@gmail.com" class="btn">Send Email</a>
   </section>
+
+    <!-- Footer  -->
+
   <footer>
     © 2025 Arham | Built with ❤️ using HTML & CSS
   </footer>
